# code_repository

./: .gitignore  gazebo_ros_install_tips  readme
allegro_hand_control/: CMakeLists.txt
allegro_hand_control/include/: AllegroRightHandModel.h  allegro_hand_parameters.h  interface.h
allegro_hand_control/logs/: plotting_commands_gnuplot.txt  sample_time_log.txt  thumb_joint_position_measured_log.txt  thumb_joint_velocity_measured_log.txt  thumb_tip_position_error_log.txt  thumb_tip_position_measured_log.txt  thumb_tip_position_trajectory_log.txt  thumb_tip_velocity_trajectory_log.txt
allegro_hand_control/src/: CMakeCache.txt  Makefile  allegro_right_hand_position_controller  allegro_right_hand_position_controller.cpp  allegro_right_hand_position_controller_soft_closure.cpp  allegro_right_hand_position_controller_traj  allegro_right_hand_position_controller_traj.cpp  allegro_right_hand_position_controller_traj_old.cpp  canAPI.cpp  cmake_install.cmake  grasp  interface.cpp  main.cpp  publish_finger_tip_position_commands  publish_finger_tip_position_commands.cpp  publish_finger_tip_position_commands_traj  publish_finger_tip_position_commands_traj.cpp
gazebo_plugins/generic_interface_plugin/: CMakeLists.txt  generic_interface_plugin.cc  generic_interface_plugin.hh
gazebo_plugins/realsense_d435_gazebo_ros_plugin/: CMakeLists.txt  RealSenseRosPlugin.cc  RealSenseRosPlugin.hh
gazebo_plugins/realsense_plugin/: CMakeLists.txt  RealSensePlugin.cc
pcl_codes/grasping/: CMakeLists.txt  cloud_visualizer.cpp  cluster_extraction.cpp  grasping_algorithm_main.cpp  region_of_interest.cpp  region_of_interest_spheres.cpp  step_1_allegro_right_hand_model_to_point_cloud.cpp  step_1_franka_gripper_model_to_point_cloud.cpp  step_1_reflex_plus_model_to_point_cloud.cpp  step_2_hand_workspace_sampling.cpp  step_3_hand_workspace_ellipsoids.cpp  step_3_hand_workspace_spheres.cpp  step_4_object_pose_approximation.cpp  step_5_region_of_interest.cpp  step_6_allign_hand_with_roi.cpp  step_7_touch_the_object_with_palm.cpp  step_9_grasp_locations_optimization.cpp  steps.txt
pcl_codes/grasping/grasping/: grasping_algorithm.h  grasping_algorithm_main.cpp  step_1_allegro_right_hand_model_to_point_cloud.cpp  step_1_franka_gripper_model_to_point_cloud.cpp  step_4_object_pose_approximation.cpp  step_5_region_of_interest.cpp  step_6_allign_hand_with_roi.cpp  step_8_filter_hand_workspace_merging_with_object_surface.cpp
pcl_codes/grasping/reflex_plus_meshes/: distal_1.ply  proximal_pad_1.ply  swivel_1.ply
pcl_codes/grasping2/: 1_grasping_algorithm_stopped_at_scanning_visualization_step.cpp  2_grasping_algorithm_stopped_at_collision_check_with_object_plane_visualization.cpp  5_grasping_algorithm_stopped_at_scanning_object_for_best_gripper_pose_plus_barebone_optimization_visualization.cpp  CMakeLists.txt  capture_realsense_point_cloud.cpp  cloud_visualizer2.cpp  cluster_extraction.cpp  grasping_algorithm.cpp  grasping_algorithm_photos_for_paper.cpp  grasping_algorithm_real_experiments.cpp  step_1_downsampling_object_cloud.cpp
pcl_codes/grasping2/gripper_workspace/: franka_left_finger_workspace_spheres_10.txt  franka_right_finger_workspace_spheres_10.txt  index_workspace_spheres_3.txt  index_workspace_spheres_4.txt  pinky_workspace_spheres_4.txt
pcl_codes/grasping2/include/: grasping_algorithm.h
pcl_codes/grasping2/object_pcd_files/: storage_bin_table.pcd
pcl_codes/grasping2/pcd_files/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cloud_visualizer  cloud_visualizer2  cluster_extraction  cmake_install.cmake  dummy_box.pcd  dummy_box_table.pcd  grasping_algorithm  mug_table.pcd  plant_pot_table.pcd  plastic_cup.pcd  realsense_box_table.pcd  sprayer.pcd  step_1_capture_and_stitch_point_clouds_then_cluster_object_and_table  step_1_downsampling_object_cloud  storage_bin.pcd  storage_bin2.pcd  storage_bin2_table.pcd  storage_box2.pcd  tooth_paste_table.pcd
pcl_codes/grasping2/pcd_files_allegro/: air_duster_table.pcd  banana.pcd  banana_table.pcd  blastic_cup_table.pcd  cute_panda_doll.pcd  cute_panda_doll_table.pcd  dish_brush.pcd  mug.pcd  plant_pot_table.pcd  plastic_cup.pcd  plastic_cup_table.pcd  realsense_box.pcd  realsense_box_table.pcd  sprayer_table.pcd  storage_bin2.pcd  storage_bin2_table.pcd  thermos_table.pcd  toilet_paper_roll.pcd  tooth_paste.pcd  tooth_paste_table.pcd
pcl_codes/grasping2/pcd_files_iros_video/: storage_bin_allegro_1.pcd  storage_bin_allegro_2.pcd  storage_bin_franka.pcd  storage_bin_table_allegro_2.pcd  storage_bin_table_franka.pcd
pcl_codes/grasping_time_efficient_plus_optimizing_contacts/: CMakeLists.txt  grasping_algorithm.cpp  grasping_algorithm_real_experiments.cpp
pcl_codes/grasping_time_efficient_plus_optimizing_contacts/finger_workspace_pcd/: index_workspace.pcd  middle_workspace.pcd
pcl_codes/grasping_time_efficient_plus_optimizing_contacts/finger_workspace_spheres/: pinky_workspace_spheres_10_1.txt  thumb_workspace_spheres_10_2.0.txt  thumb_workspace_spheres_15_1.7.txt
pcl_codes/grasping_time_efficient_plus_optimizing_contacts/include/: declarations.h  grasping_algorithm.h
pcl_codes/grasping_time_efficient_plus_optimizing_contacts/raw_object_pcd_files/: air_duster_0.pcd  air_duster_tf.txt  air_duster_upright_1.pcd  air_duster_upright_tf.txt  apple2_2.pcd  apple2_tf.txt  apple_0.pcd  (+51 more)
pcl_codes/gripper_CAD_model_to_point_cloud/: CMakeLists.txt  allegro_right_hand_model_to_point_cloud.cpp  franka_gripper_model_to_point_cloud.cpp  reflex_plus_model_to_point_cloud.cpp
pcl_codes/introduction/: CMakeLists.txt  allegro_hand_workspace_as_spheres.cpp  allegro_hand_workspace_visualisation.cpp  allegro_right_hand_ply_to_point_cloud.cpp  cloud_visualizer.cpp  compute_normals.cpp  finger_workspace_in_ellipsoids.cpp  finger_workspace_in_spheres.cpp  openni_grapper.cpp  pcd_read.cpp  pcd_write.cpp  region_of_interest.cpp  region_of_interest_old.cpp  stl_to_point_cloud.cpp
real_experiments/: CMakeLists.txt  grasping_algorithm.cpp  grasping_algorithm_real_experiments.cpp  grasping_algorithm_real_experiments_old.cpp
real_experiments/include/: grasping_algorithm.h
(+4098 files in other folders)
